fix:header wrap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,10 @@
  }
 
  .header {
-   height: 60px;
    background: rgb(50,49,49);
    background: linear-gradient(90deg, rgba(50,49,49,1) 0%, rgba(0,0,0,1) 50%, rgba(54,54,54,1) 100%);
  }
- 
- .nav {
-   background-color: none;
- }
+
 
  .container {
    max-width: 1440px;
@@ -39,7 +35,7 @@
    align-items: center;
    list-style: none;
    flex-wrap: wrap;
-   margin: 10px;
+   margin: 5px;
    padding: 0;
  }
 
